[gd_scene load_steps=4 format=3 uid="uid://dqg6v2y5s1hmg"]

[ext_resource type="Texture2D" uid="uid://d6cp0e2t4fo5" path="res://graphics/player/player.png" id="1_144vm"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_xyf88"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mm447"]
radius = 48.1664

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_xyf88")

[node name="PlayerImage" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(39, 1)
rotation = 1.44862
texture = ExtResource("1_144vm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mm447")

[node name="TimerLaser" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerGrenade" type="Timer" parent="."]
wait_time = 2.0

[node name="GrenadeStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="GrenadeStartPosition"]
position = Vector2(135, 9)

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(134, 8)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(133, 15)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(131, 3)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true
position_smoothing_speed = 2.5
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.05
drag_top_margin = 0.05
drag_right_margin = 0.05
drag_bottom_margin = 0.05

[connection signal="timeout" from="TimerLaser" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerGrenade" to="." method="_on_timer_grenade_timeout"]
